notebook with exploration analysis added

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "id": "051bec62",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "id": "26d7bc86",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "id": "cf702655",
    "metadata": {},
    "outputs": [],
@@ -245,70 +245,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "1f49f74f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "age        9\n",
-       "bp        14\n",
-       "sg        49\n",
-       "al        48\n",
-       "su        51\n",
-       "rbc      154\n",
-       "pc        67\n",
-       "pcc        6\n",
-       "ba         6\n",
-       "bgr       46\n",
-       "bu        21\n",
-       "sc        19\n",
-       "sod       89\n",
-       "pot       90\n",
-       "hemo      54\n",
-       "pcv       72\n",
-       "wbcc     107\n",
-       "rbcc     132\n",
-       "htn        4\n",
-       "dm         4\n",
-       "cad        4\n",
-       "appet      3\n",
-       "pe         3\n",
-       "ane        3\n",
-       "class      2\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isna().sum() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "c8e2ba31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# From documentation of the dataset\n",
-    "NumericalColumns = ['age','bp','bgr','bu','sc','sod','pot','pcv','hemo','wbcc','rbcc',]\n",
-    "CategoricalColumns = ['al','su','rbc','sg','pc','pcc','ba','htn','dm','cad','appet','pe','ane']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 37,
    "id": "2676582c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['class'].replace(\"ckd\\t\",\"ckd\",inplace=True)\n",
+    "df['class'].replace([\"ckd\\t\", \"no\"],[\"ckd\", \"notckd\"],inplace=True)\n",
     "\n",
     "df['dm'].replace([\"\\tno\",\"\\tyes\",\" yes\"],[\"no\",\"yes\",\"yes\"],inplace=True)\n",
     "\n",
@@ -317,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "fa8893e3",
    "metadata": {},
    "outputs": [],
@@ -331,31 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "58d593ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for columnName in CategoricalColumns:\n",
-    "  df[columnName].fillna(df[columnName].mode(), inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "1546dd99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[NumericalColumns] = df[NumericalColumns].apply(pd.to_numeric)\n",
-    "\n",
-    "for columnName in NumericalColumns:\n",
-    "  df[columnName].fillna(df[columnName].mean(), inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "id": "aa71462b",
    "metadata": {},
    "outputs": [
@@ -406,20 +324,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>48.0</td>\n",
-       "      <td>80.0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>80</td>\n",
        "      <td>1.020</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>normal</td>\n",
        "      <td>notpresent</td>\n",
        "      <td>notpresent</td>\n",
-       "      <td>121.000000</td>\n",
+       "      <td>121</td>\n",
        "      <td>...</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>7800.0</td>\n",
-       "      <td>5.200000</td>\n",
+       "      <td>44</td>\n",
+       "      <td>7800</td>\n",
+       "      <td>5.2</td>\n",
        "      <td>yes</td>\n",
        "      <td>yes</td>\n",
        "      <td>no</td>\n",
@@ -430,8 +348,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>50.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>50</td>\n",
        "      <td>1.020</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
@@ -439,11 +357,11 @@
        "      <td>normal</td>\n",
        "      <td>notpresent</td>\n",
        "      <td>notpresent</td>\n",
-       "      <td>148.036517</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>6000.0</td>\n",
-       "      <td>4.707435</td>\n",
+       "      <td>38</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
@@ -454,8 +372,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>62.0</td>\n",
-       "      <td>80.0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>80</td>\n",
        "      <td>1.010</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
@@ -463,11 +381,11 @@
        "      <td>normal</td>\n",
        "      <td>notpresent</td>\n",
        "      <td>notpresent</td>\n",
-       "      <td>423.000000</td>\n",
+       "      <td>423</td>\n",
        "      <td>...</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>7500.0</td>\n",
-       "      <td>4.707435</td>\n",
+       "      <td>31</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>no</td>\n",
        "      <td>yes</td>\n",
        "      <td>no</td>\n",
@@ -478,8 +396,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>48.0</td>\n",
-       "      <td>70.0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>70</td>\n",
        "      <td>1.005</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
@@ -487,11 +405,11 @@
        "      <td>abnormal</td>\n",
        "      <td>present</td>\n",
        "      <td>notpresent</td>\n",
-       "      <td>117.000000</td>\n",
+       "      <td>117</td>\n",
        "      <td>...</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>6700.0</td>\n",
-       "      <td>3.900000</td>\n",
+       "      <td>32</td>\n",
+       "      <td>6700</td>\n",
+       "      <td>3.9</td>\n",
        "      <td>yes</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
@@ -502,8 +420,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>51.0</td>\n",
-       "      <td>80.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>80</td>\n",
        "      <td>1.010</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -511,11 +429,11 @@
        "      <td>normal</td>\n",
        "      <td>notpresent</td>\n",
        "      <td>notpresent</td>\n",
-       "      <td>106.000000</td>\n",
+       "      <td>106</td>\n",
        "      <td>...</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>7300.0</td>\n",
-       "      <td>4.600000</td>\n",
+       "      <td>35</td>\n",
+       "      <td>7300</td>\n",
+       "      <td>4.6</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
@@ -530,31 +448,24 @@
        "</div>"
       ],
       "text/plain": [
-       "    age    bp     sg al su     rbc        pc         pcc          ba  \\\n",
-       "0  48.0  80.0  1.020  1  0  normal    normal  notpresent  notpresent   \n",
-       "1   7.0  50.0  1.020  4  0     NaN    normal  notpresent  notpresent   \n",
-       "2  62.0  80.0  1.010  2  3  normal    normal  notpresent  notpresent   \n",
-       "3  48.0  70.0  1.005  4  0  normal  abnormal     present  notpresent   \n",
-       "4  51.0  80.0  1.010  2  0  normal    normal  notpresent  notpresent   \n",
+       "  age  bp     sg al su     rbc        pc         pcc          ba  bgr  ...  \\\n",
+       "0  48  80  1.020  1  0     NaN    normal  notpresent  notpresent  121  ...   \n",
+       "1   7  50  1.020  4  0     NaN    normal  notpresent  notpresent  NaN  ...   \n",
+       "2  62  80  1.010  2  3  normal    normal  notpresent  notpresent  423  ...   \n",
+       "3  48  70  1.005  4  0  normal  abnormal     present  notpresent  117  ...   \n",
+       "4  51  80  1.010  2  0  normal    normal  notpresent  notpresent  106  ...   \n",
        "\n",
-       "          bgr  ...   pcv    wbcc      rbcc  htn   dm  cad  appet   pe  ane  \\\n",
-       "0  121.000000  ...  44.0  7800.0  5.200000  yes  yes   no   good   no   no   \n",
-       "1  148.036517  ...  38.0  6000.0  4.707435   no   no   no   good   no   no   \n",
-       "2  423.000000  ...  31.0  7500.0  4.707435   no  yes   no   poor   no  yes   \n",
-       "3  117.000000  ...  32.0  6700.0  3.900000  yes   no   no   poor  yes  yes   \n",
-       "4  106.000000  ...  35.0  7300.0  4.600000   no   no   no   good   no   no   \n",
-       "\n",
-       "  class  \n",
-       "0   ckd  \n",
-       "1   ckd  \n",
-       "2   ckd  \n",
-       "3   ckd  \n",
-       "4   ckd  \n",
+       "  pcv  wbcc rbcc  htn   dm cad appet   pe  ane class  \n",
+       "0  44  7800  5.2  yes  yes  no  good   no   no   ckd  \n",
+       "1  38  6000  NaN   no   no  no  good   no   no   ckd  \n",
+       "2  31  7500  NaN   no  yes  no  poor   no  yes   ckd  \n",
+       "3  32  6700  3.9  yes   no  no  poor  yes  yes   ckd  \n",
+       "4  35  7300  4.6   no   no  no  good   no   no   ckd  \n",
        "\n",
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,8 +476,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
+   "id": "24f7005c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ckd       250\n",
+       "notckd    150\n",
+       "Name: class, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"class\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "471393ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"preprocessed_dataset.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e932fa3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age      object\n",
+       "bp       object\n",
+       "sg       object\n",
+       "al       object\n",
+       "su       object\n",
+       "rbc      object\n",
+       "pc       object\n",
+       "pcc      object\n",
+       "ba       object\n",
+       "bgr      object\n",
+       "bu       object\n",
+       "sc       object\n",
+       "sod      object\n",
+       "pot      object\n",
+       "hemo     object\n",
+       "pcv      object\n",
+       "wbcc     object\n",
+       "rbcc     object\n",
+       "htn      object\n",
+       "dm       object\n",
+       "cad      object\n",
+       "appet    object\n",
+       "pe       object\n",
+       "ane      object\n",
+       "class    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b622e91",
    "metadata": {},
    "outputs": [],
    "source": []
