--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "id": "051bec62",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "id": "26d7bc86",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "id": "cf702655",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "id": "2676582c",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "id": "fa8893e3",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "id": "aa71462b",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "id": "24f7005c",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "Name: class, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,58 +499,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "471393ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"preprocessed_dataset.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "e932fa3c",
+   "execution_count": 56,
+   "id": "99ab9bc3",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>bp</th>\n",
+       "      <th>sg</th>\n",
+       "      <th>al</th>\n",
+       "      <th>su</th>\n",
+       "      <th>rbc</th>\n",
+       "      <th>pc</th>\n",
+       "      <th>pcc</th>\n",
+       "      <th>ba</th>\n",
+       "      <th>bgr</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pcv</th>\n",
+       "      <th>wbcc</th>\n",
+       "      <th>rbcc</th>\n",
+       "      <th>htn</th>\n",
+       "      <th>dm</th>\n",
+       "      <th>cad</th>\n",
+       "      <th>appet</th>\n",
+       "      <th>pe</th>\n",
+       "      <th>ane</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 25 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "age      object\n",
-       "bp       object\n",
-       "sg       object\n",
-       "al       object\n",
-       "su       object\n",
-       "rbc      object\n",
-       "pc       object\n",
-       "pcc      object\n",
-       "ba       object\n",
-       "bgr      object\n",
-       "bu       object\n",
-       "sc       object\n",
-       "sod      object\n",
-       "pot      object\n",
-       "hemo     object\n",
-       "pcv      object\n",
-       "wbcc     object\n",
-       "rbcc     object\n",
-       "htn      object\n",
-       "dm       object\n",
-       "cad      object\n",
-       "appet    object\n",
-       "pe       object\n",
-       "ane      object\n",
-       "class    object\n",
-       "dtype: object"
+       "    age    bp    sg    al    su   rbc    pc   pcc    ba   bgr  ...   pcv  \\\n",
+       "400      None  None  None  None  None  None  None  None  None  ...  None   \n",
+       "401      None  None  None  None  None  None  None  None  None  ...  None   \n",
+       "\n",
+       "     wbcc  rbcc   htn    dm   cad appet    pe   ane class  \n",
+       "400  None  None  None  None  None  None  None  None  None  \n",
+       "401  None  None  None  None  None  None  None  None  None  \n",
+       "\n",
+       "[2 rows x 25 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.dtypes"
+    "df[df[\"class\"].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "935aa549",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['class'].notna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "471393ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"preprocessed_dataset.csv\")"
    ]
   },
   {
