modularising the code

--- a/scripts/exploration.ipynb
+++ b/scripts/exploration.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "1d01182f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"preprocessed_dataset.csv\", index_col=0)"
+    "df = pd.read_csv(\"..\\dataset\\preprocessed_dataset_full.csv\", index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "8a5d7304",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "0df223cc",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "6645e5ca",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "91a605ed",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "freq    260  364   316  322  339   250  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "1d73b37b",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "b2f5c14e",
    "metadata": {},
    "outputs": [],
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "6c86cec5",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "8226cbe5",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "id": "d8b77287",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
        "max    26400.000000    8.000000  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "40307c59",
    "metadata": {},
    "outputs": [],
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "4f1ef0bb",
    "metadata": {},
    "outputs": [
@@ -922,7 +922,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "id": "7e1e35a3",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,7 @@
        "(400, 38)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "id": "5228de73",
    "metadata": {},
    "outputs": [],
@@ -966,8 +966,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "0d191435",
+   "execution_count": 17,
+   "id": "2adc7865",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
        "[0 rows x 38 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "05162209",
    "metadata": {},
    "outputs": [],
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "id": "f55cf0ce",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
        "Name: class, dtype: int64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "id": "255b36a2",
    "metadata": {},
    "outputs": [],
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "id": "1c98949d",
    "metadata": {},
    "outputs": [],
@@ -1100,8 +1100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "012c6dd0",
+   "execution_count": 22,
+   "id": "ec410fa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,17 +1113,17 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "38615851",
+   "id": "b6523032",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=1990)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=1990)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "e98296ff",
+   "id": "54f25eb6",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "37d9c055",
+   "id": "5ff6f1ba",
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "337c5d41",
+   "id": "3c33ebf5",
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "c017178d",
+   "id": "e760a681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "ef5a7719",
+   "id": "2c23eadb",
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "8b7a50fa",
+   "id": "d2a277e4",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "47b7dce7",
+   "id": "1c0957cf",
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "2d621b77",
+   "id": "04faf8c1",
    "metadata": {},
    "outputs": [
     {
@@ -1322,13 +1322,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "id": "b40fdcd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        33\n",
+      "           1       1.00      1.00      1.00        67\n",
+      "\n",
+      "    accuracy                           1.00       100\n",
+      "   macro avg       1.00      1.00      1.00       100\n",
+      "weighted avg       1.00      1.00      1.00       100\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = rf_RandomGrid.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "183bb4d5",
+   "id": "d3174dc4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rf_RandomGrid"
-   ]
+   "source": []
   }
  ],
  "metadata": {
