--- a/scripts/preprocessing.ipynb
+++ b/scripts/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "051bec62",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "\n",
     "data = []\n",
-    "with open('.\\dataset\\chronic_kidney_disease_full.arff', \"r\") as f:\n",
+    "with open('..\\dataset\\chronic_kidney_disease_full.arff', \"r\") as f:\n",
     "    for line in f:\n",
     "        line = line.replace('\\n', '')\n",
     "        data.append(line.split(','))\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "26d7bc86",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "cf702655",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "2676582c",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "fa8893e3",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "aa71462b",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "24f7005c",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "Name: class, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "99ab9bc3",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
        "[2 rows x 25 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "935aa549",
    "metadata": {},
    "outputs": [],
@@ -634,12 +634,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "471393ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"preprocessed_dataset.csv\")"
+    "df.to_csv(\"..\\dataset\\preprocessed_dataset_full.csv\")"
    ]
   },
   {
